--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
         <link rel="stylesheet" href="sass/slick.css">
     </head>
     <body>
-        <!-- <div class="he">
-            <iframe src="https://flo.uri.sh/visualisation/17209214/embed?auto=1" frameborder="0"></iframe>
+        <!-- <div class="flourish-embed flourish-map" data-src="visualisation/17209214">
+            <script src="https://public.flourish.studio/resources/embed.js"></script>
         </div>
-        <div class="he">
-            <iframe src="https://flo.uri.sh/visualisation/17209492/embed?auto=1" frameborder="0"></iframe>
+        <div class="flourish-embed flourish-map" data-src="visualisation/17209492">
+            <script src="https://public.flourish.studio/resources/embed.js"></script>
         </div> -->
         <div class="sliderx">
-            <div class="flourish-embed flourish-map" data-src="visualisation/17209214">
-                <script src="https://public.flourish.studio/resources/embed.js"></script>
+            <div class="he">
+                <iframe src="https://flo.uri.sh/visualisation/17209214/embed?auto=1" frameborder="0"></iframe>
             </div>
-            <div class="flourish-embed flourish-map" data-src="visualisation/17209492">
-                <script src="https://public.flourish.studio/resources/embed.js"></script>
+            <div class="he">
+                <iframe src="https://flo.uri.sh/visualisation/17209492/embed?auto=1" frameborder="0"></iframe>
             </div>
         </div>
         <script src="js/jquery-3.5.1.min.js"></script>
